# gel-image-tool

./: .gitignore  README.md  gel-tool.spec  pyproject.toml
.github/workflows/: build.yml
src/gel_tool/: app.py  processor.py
