[project]
name = "gel-image-tool"
version = "0.1.0"
description = "Desktop tool for processing gel electrophoresis images"
authors = [{ name = "Oliveira Lab" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.7",
    "opencv-python>=4.10",
    "numpy>=1.26",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[project.gui-scripts]
gel-tool = "gel_tool.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gel_tool"]
